<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        tools:context=".debug.DebugActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="16dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/actionsContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

            <TextView
                android:id="@+id/switchToDemoView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:text="DemoUI"
                android:textColor="@color/text_blue"
                android:textStyle="bold"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="45">

                    <TextView
                            android:id="@+id/deviceView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/device" />

                    <TextView
                            android:id="@+id/pitchView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pitch_none" />

                    <TextView
                            android:id="@+id/rollView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/roll_none" />

                    <TextView
                            android:id="@+id/latitudeView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/latitude_none" />

                    <TextView
                            android:id="@+id/longitudeView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/longitude_none" />

                    <TextView
                            android:id="@+id/azimuthView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/azimuth_none" />

                    <TextView
                            android:id="@+id/lastAzimuthView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/azimuth_last_none" />

                    <TextView
                        android:id="@+id/positionChangedView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/position_changed_none"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical"
                        android:layout_weight="55">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/config" />

                    <TextView
                            android:id="@+id/configPositionChangeThresholdView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/config_position_change_threshold_none" />

                    <TextView
                            android:id="@+id/configPitchRotationThresholdView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/config_pitch_rotation_threshold_none" />

                    <TextView
                            android:id="@+id/configAzimuthRotationThresholdView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/config_azimuth_rotation_threshold_none" />

                    <TextView
                            android:id="@+id/configAzimuthDeviationView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/config_azimuth_deviation_none" />

                    <ProgressBar
                            android:id="@+id/progress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_gravity="center_horizontal"
                            android:indeterminateTint="@color/green"
                            android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/audioSyncContentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/beaconsTitleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    tools:text="3 Beacons" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/beaconsView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/debug_item_beacon"
                    tools:itemCount="3"/>

                <TextView
                    android:id="@+id/poiTitleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    tools:text="5 POIs" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/poisView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/debug_item_poi"
                    tools:itemCount="5"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/deviceLocationContentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <com.sogoservices.pointme.debug.DeviceLocationView
                    android:id="@+id/deviceLocationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
            android:id="@+id/actionsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/bleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/green"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"
        android:singleLine="true"
        android:ellipsize="middle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>